force-app/main/default/objects/Referral__c/Referral__c.object-meta.xml
<CustomObject>
    <label>Outbound Referrals</label>
    <nameField>
        <label>Referral Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Outbound Referrals</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>