force-app/main/default/objects/Referral__c/fields/Additional_Email_Addresses__c.field-meta.xml
<CustomField>
    <fullName>Additional_Email_Addresses__c</fullName>
    <label>Additional Email Addresses</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>