force-app/main/default/objects/Referral__c/fields/Contact_Lookup__c.field-meta.xml
<CustomField>
    <fullName>Contact_Lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Referrals</relationshipName>
    <type>Lookup</type>
</CustomField>