force-app/main/default/objects/Referral__c/fields/Days_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Days_to_Close__c</fullName>
    <formula>IF(
    AND(
        ISPICKVAL(Status__c, &quot;Closed&quot;),
        NOT(ISBLANK(Closed_Date__c))
    ),

    TEXT(FLOOR(Closed_Date__c - CreatedDate)) &amp; &quot; Days &quot; &amp;

    TEXT(
        FLOOR(
            MOD((Closed_Date__c - CreatedDate) * 24, 24)
        )
    ) &amp; &quot; Hours &quot; &amp;

    TEXT(
        FLOOR(
            MOD((Closed_Date__c - CreatedDate) * 1440, 60)
        )
    ) &amp; &quot; Minutes&quot;,

    NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days to Close</label>
    <type>Text</type>
</CustomField>