force-app/main/default/objects/Referral__c/fields/Outbound_Task_due_date__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Task_due_date__c</fullName>
    <label>Outbound Task due date</label>
    <type>Date</type>
</CustomField>