force-app/main/default/objects/Referral__c/fields/Reason_for_Referral__c.field-meta.xml
<CustomField>
    <fullName>Reason_for_Referral__c</fullName>
    <label>Reason for Referral (High-Level)</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>