force-app/main/default/objects/Referral__c/recordTypes/Inbound.recordType-meta.xml
<RecordType>
    <fullName>Inbound</fullName>
    <active>true</active>
    <description>Referral received from a business contact</description>
    <label>Inbound</label>
</RecordType>