force-app/main/default/objects/Referral__c/validationRules/Prevent_Referral_When_Account_Deactivate.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_Referral_When_Account_Deactivate</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
    NOT(ISBLANK(Patient__c)),
    Patient__r.Is_Deactivated__c = TRUE
)</errorConditionFormula>
    <errorMessage>You cannot create or edit this Referral because the related Account is deactivated</errorMessage>
</ValidationRule>