force-app/main/default/objects/Referral__c/validationRules/Require_Additional_Email_For_Homecare.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Additional_Email_For_Homecare</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL( Referral_Type__c , &quot;Homecare&quot;),
    ISBLANK( Additional_Email_Addresses__c )
)</errorConditionFormula>
    <errorDisplayField>Additional_Email_Addresses__c</errorDisplayField>
    <errorMessage>Additional Email Addresses are required when Referral Type is Homecare.</errorMessage>
</ValidationRule>