force-app/main/default/objects/Referral__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Business_Account__c</columns>
    <columns>Patient__c</columns>
    <columns>Referral_Type__c</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Referral__c.Outbound,Referral__c.Inbound</value>
    </filters>
    <label>All</label>
</ListView>